--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,90 @@
-p {
-    color: darkslategrey;
+body {
+    background-color: #fffbf7;
+}
+  
+h1 {
+    color: #025157;
+    text-align: center;
 }
 
-#matchaImage img {
-    border-style: solid;
+p {
+    color: #8b8b8bcc;
+    font-family: 'Rubik';
+    font-size: 20px;
+}
+  
+button {
+    color: #fff;
+    background-color: #025157;
+}
+  
+.header {
+    margin: 40px 20px 0;
+    font-size: 0;
+}
+  
+li {
+    display: inline;
+}
+  
+.header > * {
+    display: inline-block;
+    font-size: 16px;
+    line-height: 45px;
+    height: 100%;
+    vertical-align: middle;
+}
+  
+.logo {
+    width: 15%;
+}
+  
+.logo > img {
+    width: 15%;
+}
+  
+.navbar {
+    width: 70%;
+    height: 45px;
+    text-align: left;
+    color: #025157;
+    font-weight: 500;
+}
+
+.navbar > * {
+    font-family: sans-serif;
+    color: #025157;
+}
+
+.navbar ul > * {
+    margin: 0 25px;
+}
+
+.actions {
+    width: 15%;
+    text-align: left;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.actions > * {
+    margin: 0 10px;
+}
+
+.actions > a {
+    color: #67b54b;
+}
+
+.actions > button {
+    color: white;
+    background-color: #67b54b;
+    padding: 12px 14px;
+    border: none;
+    border-radius: 5px;
+}
+  
+.main {
+    margin-top: 140px;
+    text-align: center;
+    font-family: 'Rubik';
 }
