--- a/styles.css
+++ b/styles.css
@@ -1,90 +1,140 @@
 body {
-    background-color: #ddd4cb;
+  background-color: #fffbf7;
 }
-  
+
 h1 {
-    color: #025157;
-    text-align: center;
+  color: #025157;
+  text-align: center;
+  font-family: 'Rubik', serif;
 }
 
 p {
-    color: #8b8b8bcc;
-    font-family: 'Rubik';
-    font-size: 20px;
+  color: #8b8b8bcc;
+  font-family: Verdana;
+  font-size: 20px;
 }
-  
+
 button {
-    color: #fff;
-    background-color: #025157;
+  color: #fff;
+  background-color: #025157;
 }
-  
+
 .header {
-    margin: 40px 20px 0;
-    font-size: 0;
+  margin: 40px 20px 0;
+  font-size: 0;
+  font-family: sans-serif;
 }
-  
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fffbf7;
+}
+
 li {
-    display: inline;
+  display: inline;
+  margin: 0 25px 0;
 }
-  
+
 .header > * {
-    display: inline-block;
-    font-size: 16px;
-    line-height: 45px;
-    height: 100%;
-    vertical-align: middle;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 45px;
+  height: 100%;
+  vertical-align: middle;
 }
-  
+
 .logo {
-    width: 15%;
+  width: 15%;
 }
-  
+
 .logo > img {
-    width: 15%;
+  width: 15%;
 }
-  
+
 .navbar {
-    width: 70%;
-    height: 45px;
-    text-align: left;
-    color: #025157;
-    font-weight: 500;
-}
-
-.navbar > * {
-    font-family: sans-serif;
-    color: #025157;
-}
-
-.navbar ul > * {
-    margin: 0 25px;
+  width: 60%;
+  text-align: center;
+  color: #025157;
+  font-weight: 500;
 }
 
 .actions {
-    width: 15%;
-    text-align: left;
-    font-size: 14px;
-    font-weight: 500;
+  width: 15%;
+  text-align: right;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .actions > * {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
-.actions > a {
-    color: #67b54b;
+.actions a {
+  color: #67b54b;
 }
 
-.actions > button {
-    color: white;
-    background-color: #67b54b;
-    padding: 12px 14px;
-    border: none;
-    border-radius: 5px;
+.actions button {
+  color: white;
+  background-color: #67b54b;
+  padding: 12px 14px;
+  border: 0;
+  border-radius: 5px;
 }
-  
+
 .main {
-    margin-top: 140px;
-    text-align: center;
+  margin-top: 285px;
+  text-align: center;
+}
+
+.main > * {
     font-family: 'Rubik';
+}
+
+.publish {
+  margin-left: 30px;
+}
+
+.publish h3 {
+  font-family: 'Fira Sans';
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+}
+
+.publish > form label {
+  color: #025157;
+  font-family: 'Fira Sans';
+  margin-right: 18px;
+}
+
+.promo {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+  align-items: center;
+}
+
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanatory-video img {
+  width: 30px;
+  margin-top: 10px;
 }
