Added bootstrap and made the website responsive

--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,9 @@ li {
   vertical-align: middle;
 }
 
-.logo {
-  width: 15%;
-}
-
 .logo > img {
-  width: 15%;
+  width: 50%;
+  margin: 5px;
 }
 
 .navbar {
@@ -187,4 +184,71 @@ li {
 .featureImg{
   margin-top: 0;
   height: 100%;
+}
+
+@media (max-width: 575px) {
+  .navbar,
+  .actions{
+    display: none;
+  }
+
+  h1{
+    font-size: 30px;
+  }
+
+  .main{
+    margin-top: 110px;
+  }
+
+  .banner > img{
+    width: 100%;
+  }
+
+  .publish > form{
+    flex-direction: column;
+  }
+
+  .publish > form > div {
+    height: 50px;
+    margin-top: 10px;
+  }
+
+  .publish > form > div > input {
+    width: 65%;
+  }
+
+  .promo {
+    flex-direction: column;
+    max-width: 90%;
+  }
+  .explanatory-video > video{
+    width: 100%;
+  }
+
+  .publish{
+    margin-top: 10px;
+  }
+
+  .publish > h3 {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+
+  .features{
+    display: block;
+  }
+}
+
+@media (min-width:576px) and (max-width: 767px) {
+  .banner > img{
+    width: 100%;
+  }
+}
+
+@media (min-width:768px) and (max-width: 991px) {
+  
+}
+
+@media (min-width:992px) and (max-width: 767px) {
+  
 }
