--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,16 @@ p {
 }
 
 button {
-  color: #fff;
   background-color: #025157;
+  color: #fff;
+  border: none;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 6px 20px;
+  margin-left: -10px;
 }
-
 .header {
-  margin: 40px 20px 0;
+  /* margin: 40px 20px 0; */
   font-size: 0;
   font-family: sans-serif;
 }
@@ -46,27 +50,28 @@ li {
   vertical-align: middle;
 }
 
-.logo > img {
-  width: 50%;
-  margin: 5px;
+.logo{
+  width: 15%;
+}
+
+.logo > a img{
+  width: 15%;
 }
 
 .navbar {
-  width: 60%;
   text-align: center;
   color: #025157;
   font-weight: 500;
 }
 
 .actions {
-  width: 15%;
   text-align: right;
   font-size: 14px;
   font-weight: 600;
 }
 
 .actions > * {
-  margin: 0 5px;
+  margin: 0 10px;
 }
 
 .actions a {
@@ -186,10 +191,94 @@ li {
   height: 100%;
 }
 
+.success-stories {
+  background-color: #A1D683;
+  padding: 5% 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.success-stories .overview {
+  flex: 2;
+  padding-right: 100px;
+}
+.success-stories .overview h2 {
+  font-family: "Alegreya", serif;
+  font-size: 51px;
+  line-height: 61px;
+  color: #025157;
+}
+.success-stories .overview p {
+  color: #343434;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+.success-stories .overview button {
+  font-size: 14px;
+  padding: 12px 12px 6px 12px;
+  border-radius: 8px;
+  height: 45px;
+  font-weight: 600;
+  margin-left: 0;
+}
+.success-stories .overview img {
+  width: 500px;
+  max-width: 100%;
+}
+
+.card .card-body h4 {
+  color: #025157;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 12px;
+}
+
+.card .card-body .results{
+  display: flex;
+  align-items: center;
+  color: #828282;
+}
+
+.card .card-body .results img{
+  width: 26px;
+  margin-right: 20px;
+}
+
+.card .card-body .results p {
+  margin-top: 0;
+}
+
+.card .card-footer {
+  margin-bottom: 20px;
+  background-color: unset;
+  border-top: unset;
+}
+
+.card .card-footer button {
+  display: block;
+  margin-left: 0;
+  border-radius: 5px;
+  font-size: 13;
+  font-weight: 600;
+  padding: 12px 20px;
+  width: 100%;
+}
+
+.description {
+  margin: 0 25%;
+}
+
 @media (max-width: 575px) {
-  .navbar,
+  /* .navbar,
   .actions{
     display: none;
+  } */
+
+  .actions,
+  .navbar {
+    text-align: center;
   }
 
   h1{
@@ -246,7 +335,10 @@ li {
 }
 
 @media (min-width:768px) and (max-width: 991px) {
-  
+  .actions,
+  .navbar {
+    text-align: center;
+  }
 }
 
 @media (min-width:992px) and (max-width: 767px) {
